Improved overall performance